force-app/main/default/objects/DM_Harvest__c/DM_Harvest__c.object-meta.xml
<CustomObject>
    <label>Harvest</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Harvest #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>