force-app/main/default/objects/DM_Harvest__c/fields/DM_Bill_of_Lading__c.field-meta.xml
<CustomField>
    <fullName>DM_Bill_of_Lading__c</fullName>
    <label>Bill of Lading #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>