force-app/main/default/objects/DM_Harvest__c/fields/DM_Crop_Sold__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crop Sold</label>
    <type>Checkbox</type>
</CustomField>