force-app/main/default/objects/DM_Harvest__c/fields/DM_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety__c</fullName>
    <formula>DM_Production__r.DM_Material__r.DM_Crop_Variety__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crop Variety</label>
    <type>Text</type>
</CustomField>