force-app/main/default/objects/DM_Harvest__c/fields/DM_Crop_Variety_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety_Storage_Location__c</fullName>
    <formula>if( isblank(DM_Storage_Location__c), &quot;Direct to Market - &quot; + DM_Crop_Variety__c,  
 DM_Inventory__r.Name + &quot; - &quot; + DM_Crop_Variety__c + &quot; - &quot; +  DM_Storage_Location__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>