force-app/main/default/objects/DM_Harvest__c/fields/DM_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Disposition_Status__c</fullName>
    <label>Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>Compost</fullName>
            </value>
            <value>
                <fullName>Livestock Feed</fullName>
            </value>
            <value>
                <fullName>Plowed Under</fullName>
            </value>
            <value>
                <fullName>Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Processed On-Farm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>