force-app/main/default/objects/DM_Harvest__c/fields/DM_Harvest_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest_Crop_Variety__c</fullName>
    <formula>Name + &quot; - &quot; +  DM_Crop_Variety__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harvest + Crop Variety</label>
    <type>Text</type>
</CustomField>