force-app/main/default/objects/DM_Harvest__c/fields/DM_Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Harvest Date</label>
    <type>Date</type>
</CustomField>