force-app/main/default/objects/DM_Harvest__c/fields/DM_Harvest_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest_Quantity__c</fullName>
    <label>Harvest Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>