force-app/main/default/objects/DM_Harvest__c/fields/DM_Harvest_UOM__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest_UOM__c</fullName>
    <label>Harvest UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pounds</fullName>
                <default>true</default>
                <label>Pounds</label>
            </value>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Bushels</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>