force-app/main/default/objects/DM_Harvest__c/fields/DM_Intended_Use__c.field-meta.xml
<CustomField>
    <fullName>DM_Intended_Use__c</fullName>
    <label>Intended Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct to Market</fullName>
                <default>true</default>
                <label>Direct to Market</label>
            </value>
            <value>
                <fullName>Future Sale from Inventory</fullName>
            </value>
            <value>
                <fullName>Seed Propagation</fullName>
            </value>
            <value>
                <fullName>Transplanting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>