force-app/main/default/objects/DM_Harvest__c/fields/DM_Production__c.field-meta.xml
<CustomField>
    <fullName>DM_Production__c</fullName>
    <label>Production</label>
    <referenceTo>DM_Production__c</referenceTo>
    <relationshipName>Harvest_Yield</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>