force-app/main/default/objects/DM_Harvest__c/fields/DM_Quantity_not_Sold__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_not_Sold__c</fullName>
    <label>Quantity not Sold/Rejected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>