force-app/main/default/objects/DM_Harvest__c/fields/DM_Sale__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale #</label>
    <referenceTo>DM_Sale__c</referenceTo>
    <relationshipLabel>Harvest</relationshipLabel>
    <relationshipName>Harvest</relationshipName>
    <type>Lookup</type>
</CustomField>