force-app/main/default/objects/DM_Harvest__c/fields/DM_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>DM_Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>