force-app/main/default/objects/DM_Harvest__c/fields/DM_Transportation_Vendor__c.field-meta.xml
<CustomField>
    <fullName>DM_Transportation_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportation Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Transportation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Harvest (Transportation Vendor)</relationshipLabel>
    <relationshipName>Harvest1</relationshipName>
    <type>Lookup</type>
</CustomField>