force-app/main/default/objects/DM_Harvest__c/recordTypes/DM_Yield.recordType-meta.xml
<RecordType>
    <fullName>DM_Yield</fullName>
    <active>true</active>
    <label>Yield</label>
</RecordType>