force-app/main/default/objects/DM_Harvest__c/validationRules/Harvest_Date_before_Planting_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Harvest_Date_before_Planting_Date</fullName>
    <active>true</active>
    <description>Harvest Date must be later that Planting Date</description>
    <errorConditionFormula>DM_Harvest_Date__c &lt;  DM_Production__r.DM_Planting_Date__c</errorConditionFormula>
    <errorDisplayField>DM_Harvest_Date__c</errorDisplayField>
    <errorMessage>Harvest Date must be after Planting Date</errorMessage>
</ValidationRule>