force-app/main/default/objects/DM_Harvest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Crop_Variety_Storage_Location__c</columns>
    <columns>DM_Harvest_Date__c</columns>
    <columns>DM_Harvest_Quantity__c</columns>
    <columns>DM_Harvest_UOM__c</columns>
    <columns>DM_Production__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>